examples/simple/collection/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-uor
  labels:
    app.kubernetes.io/name: simple-uor
    app.kubernetes.io/instance: simple-uor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-uor
      app.kubernetes.io/instance: simple-uor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-uor
        app.kubernetes.io/instance: simple-uor
    spec:
      containers:
        - name: web
          image: quay.io/ablock/gitops-helm-quarkus:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
